--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             </div>
             <div class="traditions-images">
               <img
+                class="baker-photo"
                 src="./images/baker-man.jpg"
                 alt="Чоловік пекар дивиться з посмішкою на батони хліба"
               />
@@ -79,35 +80,47 @@
             Наші найкращі<br />
             <span class="accent">шеф-кухарі</span>
           </h2>
-          <ul class="format-items">
-            <li>
-              <article>
+          <ul class="chefs-list">
+            <li class="chefs-item">
+              <article class="chef-card">
                 <img
-                  class="chet-photo"
+                  class="chef-photo"
                   src="./images/nastya-chef.jpg"
                   alt="Настя"
                 />
-                <h3 class="chef_title">Настя</h3>
-                <p>Привіт, я Настя!</p>
-                <p>Вже 10 років, я втілюю у життя цікаві та смачні ідеї.</p>
-                <p>Я випечу для вас найсмачніші вироби!</p>
+                <div>
+                  <h3 class="chef_title">Настя</h3>
+                  <p class="chef-text">Привіт, я Настя!</p>
+                  <p class="chef-text">
+                    Вже 10 років, я втілюю<br />
+                    у життя цікаві та смачні ідеї.
+                  </p>
+                  <p class="chef-text">
+                    Я випечу для вас<br />
+                    найсмачніші вироби!
+                  </p>
+                </div>
               </article>
             </li>
-            <li>
-              <article>
+            <li class="chefs-item">
+              <article class="chef-card">
                 <img
-                  class="chet-photo"
+                  class="chef-photo"
                   src="./images/vlad-chef.jpg"
                   alt="Влад"
                 />
-                <h3 class="chef_title">Влад</h3>
-                <p>Привіт, я Влад!</p>
-                <p>
-                  Мій кодитерський стаж вже 18 років.
-                  <span lang="en">SHOP BEKERY</span> - це наша любов, якою ми
-                  ділимось кожен раз з Вами через нашу випічку!
-                </p>
-                <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+                <div>
+                  <h3 class="chef_title">Влад</h3>
+                  <p class="chef-text">Привіт, я Влад!</p>
+                  <p class="chef-text">
+                    Мій кодитерський стаж вже 18 років.
+                    <span lang="en">SHOP BEKERY</span> - це наша любов, якою ми
+                    ділимось кожен раз з Вами через нашу випічку!
+                  </p>
+                  <p class="chef-text">
+                    Я зроблю для вас унікальну начинку на будь який смак!
+                  </p>
+                </div>
               </article>
             </li>
           </ul>
@@ -116,77 +129,139 @@
       <section class="section" id="format-sections center">
         <div class="container">
           <h2 class="formats-title section_title center">Формати</h2>
-          <button class="carusel-button" type="button">
-            <svg width="16" height="16">
-              <use href="./images/symbol-defs.svg#icon-arrow"></use>
-            </svg>
-          </button>
-          <ul class="formats-list">
-            <li class="formats-item">
-              <article class="format-card">
-                <h3 class="format_title" lang="en">Walrus</h3>
-                <div class="format_text">
-                  <p>Площа: до 120 м2</p>
-                  <p>Меню: розширене меню</p>
-                  <p>
-                    Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                    офіціанти-різнороби
-                  </p>
-                  <p>Посадкові місця: є</p>
-                </div>
-              </article>
-            </li>
-            <li class="formats-item">
-              <article class="format-card">
-                <h3 class="format_title" lang="en">Horseshoe</h3>
-                <div class="format_text">
-                  <p>Площа: до 25 м2</p>
-                  <p>Меню: найпопулярніші позиції меню</p>
-                  <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
-                  <p>Посадкові місця: відсутні</p>
-                </div>
-              </article>
-            </li>
-            <li class="formats-item">
-              <article class="format-card">
-                <h3 class="format_title" lang="en">Handlebar</h3>
-                <div class="format_text">
-                  <p>Площа: до 15 м2</p>
-                  <p>Меню: найпопулярніші позиції меню</p>
-                  <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
-                  <p>Посадкові місця: відсутні</p>
-                </div>
-              </article>
-            </li>
-          </ul>
-          <button class="carusel-button" type="button">
-            <svg width="16" height="16">
-              <use href="./images/symbol-defs.svg#icon-arrow"></use>
-            </svg>
-          </button>
+          <div class="formats-container">
+            <button class="carusel-button" type="button">
+              <svg width="16" height="16">
+                <use href="./images/symbol-defs.svg#icon-arrow"></use>
+              </svg>
+            </button>
+            <ul class="formats-list">
+              <li class="formats-item">
+                <article class="format-card">
+                  <h3 class="format_title" lang="en">Walrus</h3>
+                  <div class="format_text">
+                    <p>Площа: до 120 м2</p>
+                    <p>Меню: розширене меню</p>
+                    <p>
+                      Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                      офіціанти-різнороби
+                    </p>
+                    <p>Посадкові місця: є</p>
+                  </div>
+                </article>
+              </li>
+              <li class="formats-item">
+                <article class="format-card">
+                  <h3 class="format_title" lang="en">Horseshoe</h3>
+                  <div class="format_text">
+                    <p>Площа: до 25 м2</p>
+                    <p>Меню: найпопулярніші позиції меню</p>
+                    <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                    <p>Посадкові місця: відсутні</p>
+                  </div>
+                </article>
+              </li>
+              <li class="formats-item">
+                <article class="format-card">
+                  <h3 class="format_title" lang="en">Handlebar</h3>
+                  <div class="format_text">
+                    <p>Площа: до 15 м2</p>
+                    <p>Меню: найпопулярніші позиції меню</p>
+                    <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                    <p>Посадкові місця: відсутні</p>
+                  </div>
+                </article>
+              </li>
+            </ul>
+            <button class="carusel-button" type="button">
+              <svg width="16" height="16">
+                <use href="./images/symbol-defs.svg#icon-arrow"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </section>
-      <section class="section" id="contact-sections">
+      <section class="contact-sections section" id="contact-sections">
         <div class="container">
-          <h2 class="contact-title section_title">
-            Приєднуйся до мережі пекарень
-          </h2>
-          <p>Заповни форму, щоб ми звʼязались з тобою!</p>
-
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1640546631747!2d30.488653212387387!3d50.45666967147485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1699621607534!5m2!1suk!2sua"
-            width="603"
-            height="595"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
+          <div class="contact-container">
+            <div class="contact-form">
+              <h2 class="contact-title section_title">
+                Приєднуйся до мережі пекарень
+              </h2>
+              <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+            </div>
+            <iframe
+              class="contact-map"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1640546631747!2d30.488653212387387!3d50.45666967147485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1699621607534!5m2!1suk!2sua"
+              width="603"
+              height="595"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
         </div>
       </section>
     </main>
     <footer class="footer">
       <div class="container">
+        <div class="footer-container">
+          <nav>
+            <a href="#">
+              <img src="images/logo.svg" alt="logo" />
+            </a>
+            <ul>
+              <li>
+                <a class="link" href="#traditions-section">Наші традиції</a>
+              </li>
+              <li><a class="link" href="#chefs-sections">Шеф-кухарі</a></li>
+              <li><a class="link" href="#format-sections">Формати</a></li>
+              <li><a class="link" href="#contact-sections">Контакти</a></li>
+            </ul>
+          </nav>
+          <address>
+            <ul>
+              <li>
+                <a class="address_link" href="tel:+38(096)0000007">
+                  +38 (096) 000 00 07
+                </a>
+              </li>
+              <li>
+                <a class="address_link" href="mailto:shopbakery@gmail.com">
+                  shopbakery@gmail.com
+                </a>
+              </li>
+              <li>
+                <a
+                  class="address_link"
+                  href="https://maps.app.goo.gl/vpB8r5CX4fG1u7wv7"
+                  target="_blank"
+                >
+                  Україна, м. Київ, вул. Січових Стрільців 54
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <svg class="address-icon" width="32" height="32">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <svg class="address-icon" width="32" height="32">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+            <a class="address_link" href="#" target="_blank"
+              >Політика конфіденційності</a
+            >
+            <p class="address_copyright">&copy 2022 Дані захищені</p>
+          </address>
+        </div>
         <nav>
           <a href="#">
             <img src="images/logo.svg" alt="logo" />
