--- a/index.html
+++ b/index.html
@@ -91,73 +91,73 @@
             Наші найкращі<br />
             <span class="text-brand-dark">шеф-кухарі</span>
           </h2>
-          <ul class="chefs-list">
-            <li class="chefs-item">
+          <ul class="chefs-section__list">
+            <li class="chefs-section__item">
               <article class="chef-card">
                 <img
-                  class="chef-photo"
+                  class="chef-card__photo"
                   src="./images/nastya-chef.jpg"
                   alt="Настя"
                 />
                 <div>
-                  <h3 class="chef_title">Настя</h3>
-                  <div class="chef-text">
-                    <p>Привіт, я Настя!</p>
-                    <p>
-                      Вже 10 років, я втілюю<br />
-                      у життя цікаві та смачні ідеї.
-                    </p>
-                    <p>
-                      Я випечу для вас<br />
-                      найсмачніші вироби!
-                    </p>
-                  </div>
+                  <h3 class="chef-card__title">Настя</h3>
+
+                  <p class="chef-card__text">Привіт, я Настя!</p>
+                  <p class="chef-card__text">
+                    Вже 10 років, я втілюю<br />
+                    у життя цікаві та смачні ідеї.
+                  </p>
+                  <p class="chef-card__text">
+                    Я випечу для вас<br />
+                    найсмачніші вироби!
+                  </p>
                 </div>
               </article>
             </li>
-            <li class="chefs-item">
+            <li class="chefs-section__item">
               <article class="chef-card">
                 <img
-                  class="chef-photo"
+                  class="chef-card__photo"
                   src="./images/vlad-chef.jpg"
                   alt="Влад"
                 />
                 <div>
-                  <h3 class="chef_title">Влад</h3>
-                  <div class="chef-text">
-                    <p>Привіт, я Влад!</p>
-                    <p>
-                      Мій кодитерський стаж вже 18 років.
-                      <span lang="en">SHOP BEKERY</span> - це наша любов, якою
-                      ми ділимось кожен раз з Вами через нашу випічку!
-                    </p>
-                    <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
-                  </div>
+                  <h3 class="chef-card__title">Влад</h3>
+
+                  <p class="chef-card__text">Привіт, я Влад!</p>
+                  <p class="chef-card__text">
+                    Мій кодитерський стаж вже 18 років.
+                    <span lang="en">SHOP BEKERY</span> - це наша любов, якою ми
+                    ділимось кожен раз з Вами через нашу випічку!
+                  </p>
+                  <p class="chef-card__text">
+                    Я зроблю для вас унікальну начинку на будь який смак!
+                  </p>
                 </div>
               </article>
             </li>
           </ul>
         </div>
       </section>
-      <section class="section" id="format-sections center">
+      <section class="formats-section section center" id="format-sections">
         <div class="container">
-          <h2 class="formats-title section_title center">Формати</h2>
-          <div class="formats-container">
+          <h2 class="formats-section__title section__title center">Формати</h2>
+          <div class="formats-section__container">
             <button class="carusel-button" type="button">
               <svg width="16" height="16">
                 <use href="./images/symbol-defs.svg#icon-arrow"></use>
               </svg>
             </button>
-            <ul class="formats-list">
-              <li class="formats-item">
+            <ul class="formats-section__list">
+              <li class="formats-section__item">
                 <article class="format-card">
                   <img
-                    class="format-image"
+                    class="format-card__image"
                     src="./images/walrus-format.jpg"
                     alt="Walrus format"
                   />
-                  <h3 class="format_title" lang="en">Walrus</h3>
-                  <div class="format_text">
+                  <h3 class="format-card__title" lang="en">Walrus</h3>
+                  <div class="format-card__text">
                     <p>Площа: до 120 м2</p>
                     <p>Меню: розширене меню</p>
                     <p>
@@ -168,15 +168,15 @@
                   </div>
                 </article>
               </li>
-              <li class="formats-item">
+              <li class="formats-section__item">
                 <article class="format-card">
                   <img
-                    class="format-image"
+                    class="formats-card__image"
                     src="./images/horseshoe-format.jpg"
                     alt="Horseshoe format"
                   />
-                  <h3 class="format_title" lang="en">Horseshoe</h3>
-                  <div class="format_text">
+                  <h3 class="format-card__title" lang="en">Horseshoe</h3>
+                  <div class="format-card__text">
                     <p>Площа: до 25 м2</p>
                     <p>Меню: найпопулярніші позиції меню</p>
                     <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
@@ -184,15 +184,15 @@
                   </div>
                 </article>
               </li>
-              <li class="formats-item">
+              <li class="formats-section__item">
                 <article class="format-card">
                   <img
-                    class="format-image"
+                    class="format-card__image"
                     src="./images/handler-format.jpg"
                     alt="Handlebar format"
                   />
-                  <h3 class="format_title" lang="en">Handlebar</h3>
-                  <div class="format_text">
+                  <h3 class="format-card__title" lang="en">Handlebar</h3>
+                  <div class="format-card__text">
                     <p>Площа: до 15 м2</p>
                     <p>Меню: найпопулярніші позиції меню</p>
                     <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
@@ -211,9 +211,9 @@
       </section>
       <section class="contact-sections section" id="contact-sections">
         <div class="container">
-          <div class="contact-container">
-            <div class="contact-form">
-              <h2 class="contact-title section_title">
+          <div class="contact-sections__container">
+            <div class="contact-sections__form">
+              <h2 class="contact-sections__title section__title">
                 Приєднуйся до мережі пекарень
               </h2>
               <p>Заповни форму, щоб ми звʼязались з тобою!</p>
@@ -266,7 +266,7 @@
               </form>
             </div>
             <iframe
-              class="contact-map"
+              class="contact-sections__map"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1640546631747!2d30.488653212387387!3d50.45666967147485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1699621607534!5m2!1suk!2sua"
               width="603"
               height="595"
