--- a/index.html
+++ b/index.html
@@ -34,7 +34,29 @@
             </svg>
           </button>
           <div class="mobile-menu">
-            <button class="menu-btn-close" type="button">Close</button>
+            <button class="mobile-menu__btn-close menu-btn-close" type="button">
+              X
+            </button>
+            <ul class="mobile-menu__menu">
+              <li>
+                <a class="mobile-menu__link" href="#traditions-section"
+                  >Наші традиції</a
+                >
+              </li>
+              <li>
+                <a class="mobile-menu__link" href="#chefs-sections"
+                  >Шеф-кухарі</a
+                >
+              </li>
+              <li>
+                <a class="mobile-menu__link" href="#format-sections">Формати</a>
+              </li>
+              <li>
+                <a class="mobile-menu__link" href="#contact-sections"
+                  >Контакти</a
+                >
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -44,8 +66,14 @@
         <h1 class="hero-section__title center">
           <span class="text-brand">Сучасна</span> пекарня
         </h1>
+        <button
+          class="hero-section__button button modal-btn-open"
+          type="button"
+        >
+          Замовити дзвінок
+        </button>
       </section>
-      <!-- <section class="advantages-section">
+      <section class="advantages-section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="advantages-section__list">
@@ -58,8 +86,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="section traditions-section" id="traditions-section">
+      </section>
+      <section class="section traditions-section" id="traditions-section">
         <div class="container">
           <div class="traditions-section__container">
             <div class="traditions-section__content">
@@ -92,7 +120,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
       <!-- <section class="chefs-section section" id="chefs-sections">
         <div class="container">
           <h2 class="chefs-section__title section__title center">
@@ -292,7 +320,7 @@
         </div>
       </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer-container">
           <nav class="footer-nav">
@@ -356,7 +384,7 @@
           </address>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <div class="backdrop is-hidden">
       <div class="modal">
         <button class="modal-btn-close" type="button">X</button>
@@ -414,7 +442,7 @@
         </form>
       </div>
     </div>
-    <script src="js/modal.js"></script>
     <script src="js/mobile-menu.js"></script>
+    <script src="js/modal.js"></script>
   </body>
 </html>
