--- a/index.html
+++ b/index.html
@@ -381,8 +381,6 @@
             <iframe
               class="contact-section__map"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1640546631747!2d30.488653212387387!3d50.45666967147485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1699621607534!5m2!1suk!2sua"
-              width="603"
-              height="595"
               style="border: 0"
               allowfullscreen=""
               loading="lazy"
@@ -392,17 +390,17 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
-        <div class="footer-container">
-          <nav class="footer-nav">
-            <div class="footer-logo">
+        <div class="footer__container">
+          <nav class="footer__nav">
+            <div class="footer__logo">
               <a href="#">
                 <img src="images/logo.svg" alt="logo" />
               </a>
             </div>
 
-            <ul class="footer-menu">
+            <ul class="footer__menu">
               <li>
                 <a class="link" href="#traditions-section">Наші традиції</a>
               </li>
@@ -411,21 +409,24 @@
               <li><a class="link" href="#contact-sections">Контакти</a></li>
             </ul>
           </nav>
-          <address class="footer-adress">
-            <ul class="address-list">
+          <address class="footer__adress">
+            <ul class="footer__address-list">
               <li>
-                <a class="address_link" href="tel:+38(096)0000007">
+                <a class="footer__address_link" href="tel:+38(096)0000007">
                   +38 (096) 000 00 07
                 </a>
               </li>
               <li>
-                <a class="address_link" href="mailto:shopbakery@gmail.com">
+                <a
+                  class="footer__address_link"
+                  href="mailto:shopbakery@gmail.com"
+                >
                   shopbakery@gmail.com
                 </a>
               </li>
               <li>
                 <a
-                  class="address_link"
+                  class="footer__address_link"
                   href="https://maps.app.goo.gl/vpB8r5CX4fG1u7wv7"
                   target="_blank"
                 >
@@ -434,29 +435,29 @@
               </li>
               <li>
                 <a href="#">
-                  <svg class="address-icon" width="32" height="32">
+                  <svg class="footer__address-icon" width="32" height="32">
                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <svg class="address-icon" width="32" height="32">
+                  <svg class="footer__address-icon" width="32" height="32">
                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
             </ul>
-            <div class="address-info">
-              <a class="address_link" href="#" target="_blank"
+            <div class="footer__address-info">
+              <a class="footer__address_link" href="#" target="_blank"
                 >Політика конфіденційності</a
               >
-              <p class="address_copyright">&copy 2022 Дані захищені</p>
+              <p class="footer__address_copyright">&copy 2022 Дані захищені</p>
             </div>
           </address>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <div class="backdrop is-hidden">
       <div class="modal">
         <button class="modal-btn-close" type="button">X</button>
